deployPolicy/manual-canary/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "canary.starmooc.net"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prod-service
                port:
                  number: 80
